Make LoginService more robust
- Add some tests
- Detect successful/failed logins
- Catch request exceptions

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
             "Guttmann\\NautCli\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Guttmann\\NautCli\\": "tests/"
+        }
+    },
     "bin": [
         "bin/naut-cli"
     ],
