--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,11 @@
     "description": "CLI client for SilverStripe deploynaut",
     "type": "project",
     "require": {
-        "symfony/console": "^3.2",
         "guzzlehttp/guzzle": "^6.2",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "symfony/framework-bundle": "^3.3",
+        "symfony/console": "^3.3",
+        "symfony/yaml": "^3.3"
     },
     "autoload": {
         "psr-4": {
