--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,8 @@
     "require": {
         "guzzlehttp/guzzle": "^6.2",
         "vlucas/phpdotenv": "^2.4",
-        "symfony/framework-bundle": "^3.3",
         "symfony/console": "^3.3",
-        "symfony/yaml": "^3.3"
+        "pimple/pimple": "^3.2"
     },
     "autoload": {
         "psr-4": {
